# server/api/controllers/utils/router.js
@@ -1,0 +1,8 @@
+import * as express from 'express';
+import cuid from 'cuid';
+
+export default express
+  .Router()
+  .get('/guid', (req, res) => {
+    return res.status(200).send(cuid());
+   });
