# server/common/swagger/Api.yaml
@@ -9,6 +9,7 @@ tags:
   - name: Categories
   - name: Specification
   - name: Authentication
+  - name: Util
     description: The swagger API specification
 
 consumes:
@@ -16,6 +17,13 @@ consumes:
 produces:
   - application/json
 paths:
+  /utils/guid:
+    get:
+      tags:
+        - Util
+      responses:
+        200:
+          description: successful response
   /auth/facebook:
     get:
       tags:
